--- a/css/personal.css
+++ b/css/personal.css
@@ -1,3 +1,32 @@
+a {
+    text-decoration: none;
+}
+
+#project_1 {
+    padding : 5% 5%;
+    margin : 10% 0;
+}
+#project_2 {
+    padding : 5% 5%;
+    margin : 10% 0;
+}
+#project_3 {
+    padding : 3% 5%;
+    margin : 10% 0;
+}
+
+.img {
+    margin : 5px;
+}
+.img-box {
+    margin : auto;
+}
+
+.address {
+    font-size : 18px;
+    color:black;
+}
+
 .iconimg:hover {
     transform: rotate( 45deg );
 }
